# lrdbenchmark

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CITATION_PREVIEW.md  CLASSICAL_ESTIMATORS_AUDIT_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  COMPREHENSIVE_THREE_WAY_BENCHMARK_SUMMARY.md  DEEPENED_RESULTS_ANALYSIS_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  ENHANCED_CONTAMINATION_TESTING_SUMMARY.md  ENHANCED_EVALUATION_METRICS_SUMMARY.md  ENHANCED_INTRODUCTION_SUMMARY.md  ENHANCED_NEURAL_NETWORK_FACTORY_SUMMARY.md  ENVIRONMENT_SETUP.md  FINAL_ML_IMPLEMENTATION_SUMMARY.md  GITHUB_ACTIONS_TROUBLESHOOTING.md  GITHUB_REPOSITORY_INFO.md  GPU_CONFIGURATION_GUIDE.md  MANUSCRIPT_DATA_VERIFICATION_REPORT.md  MANUSCRIPT_UPDATE_SUMMARY.md  ML_AUDIT_IMPROVEMENTS_SUMMARY.md  ML_AUDIT_SUMMARY.md  ML_BENCHMARK_SUMMARY.md  ML_ESTIMATORS_BENCHMARK_REPORT.md  ML_ESTIMATORS_BENCHMARK_REPORT_FIXED.md  ML_VS_CLASSICAL_BENCHMARK_SUMMARY.md  NEURAL_NETWORK_FACTORY_SUMMARY.md  NEURAL_NETWORK_PAPER_UPDATE_SUMMARY.md  NOTEBOOK_UPDATE_SUMMARY.md  OVERLEAF_CITATION_FIX.md  PACKAGE_STRUCTURE_FIX_SUMMARY.md  PROJECT_CLEANUP_SUMMARY.md  README.md  REAL_WORLD_VALIDATION_SUMMARY.md  RELEASE_NOTES_v2.3.0.md  RELEASE_NOTES_v2.4.0.md  RESEARCH_READINESS_ASSESSMENT.md  (+105 more)
.github/: PYPI_PUBLISHING_GUIDE.md  REPOSITORY_RENAME_GUIDE.md
benchmark_results/: classical_estimators_benchmark_results.json  classical_estimators_benchmark_summary.csv
benchmark_results_demo/: contaminated_results.csv  final_analysis_report.md  pure_results.csv  real_world_results.csv  table_pure_rmse.tex  table_real_world.tex  table_robustness.tex
benchmark_results_experiment/: contaminated_results.csv  leaderboard.csv  pure_results.csv  realistic_results.csv  statistical_analysis.json  table_pure_stats.tex
benchmark_results_full/: final_analysis_report.md  pure_results.csv  table_pure_rmse.tex
benchmark_results_ml_nn/: contaminated_results.csv  leaderboard.csv  leaderboard.md  ml_nn_summary_table.tex  ml_nn_table_pure_stats.tex  ml_table_contamination.tex  ml_table_pure.tex  nn_table_contamination.tex  nn_table_pure.tex  pure_results.csv  realistic_results.csv  statistical_analysis.json  table_pure_rmse.md  table_robustness_mae.md
benchmark_results_ml_nn_v2/: contaminated_results.csv  leaderboard.csv  leaderboard.md  pure_results.csv  realistic_results.csv  statistical_analysis.json  table_pure_rmse.md  table_pure_stats.tex  table_robustness_mae.md
benchmark_test/: contaminated_results.csv  leaderboard.csv  pure_results.csv  realistic_results.csv  statistical_analysis.json  table_pure_stats.tex
classical_eeg_results/: classical_eeg_summary_20250905_140820.json
comprehensive_benchmark_results/: comprehensive_classical_ml_nn_analysis.json  comprehensive_classical_ml_nn_results.csv
comprehensive_final_nn_results/: comprehensive_final_nn_benchmark_20250905_200517.csv  comprehensive_final_nn_benchmark_20250906_020137.csv  comprehensive_final_nn_benchmark_20250906_020326.csv
comprehensive_fixed_nn_results/: comprehensive_fixed_nn_benchmark_20250905_200250.csv
comprehensive_nn_results/: comprehensive_nn_benchmark_20250905_195918.csv
comprehensive_results/: comprehensive_classical_benchmark_20250905_111607.csv  comprehensive_classical_summary_20250905_111607.json
config/: CONDA_FREE_SETUP.md  MANIFEST.in  benchmark_protocol.yaml  pyproject.toml
contamination_testing/: contamination_testing_20250906_041836.json  contamination_testing_summary_20250906_041836.csv
demo_output/: production_ml_results.json
demo_results/: quick_classical_eeg_demo_20250905_113108.csv  quick_classical_eeg_summary_20250905_113108.json
docs/: BENCHMARK_ORGANIZATION_SUMMARY.md  CHANGELOG.md  CLASSICAL_AUDIT_SUMMARY.md  CLASSICAL_BENCHMARK_SUMMARY.md  COMPREHENSIVE_ESTIMATOR_CATEGORY_COMPARISON_REPORT.md  COMPREHENSIVE_HEAVY_TAIL_BENCHMARK_SUMMARY.md  COMPREHENSIVE_LEADERBOARD_REPORT.md  COMPREHENSIVE_PERFORMANCE_COMPARISON.md  FEATURE_EXTRACTION_GUIDE.md  GPU_CONFIGURATION_GUIDE.md  HEAVY_TAIL_BENCHMARK_SUMMARY.md  MANUSCRIPT_UPDATE_SUMMARY.md  ML_ESTIMATORS_AUDIT_REPORT.md  Makefile  NEURAL_ESTIMATORS_BENCHMARK_REPORT.md  PROJECT_OVERVIEW.md  README.rst  RESEARCH_WORKFLOW_GUIDE.md  ROBUSTNESS_IMPROVEMENT_PLAN.md  conf.py  (+8 more)
(+674 files in other folders)
