[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lrdbenchmark"
version = "2.3.0"
description = "A comprehensive benchmark for long-range dependence estimators"
authors = [
    { name = "Davian Jimenez", email = "davian.jimenez@example.com" }
]
maintainers = [
    {name = "Davian R. Chin", email = "d.r.chin@pgr.reading.ac.uk"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["fractional-calculus", "numerical-methods", "machine-learning", "graph-neural-networks", "autograd", "spectral-methods", "stochastic-optimization", "jax", "pytorch", "numba", "scientific-computing", "mathematics", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # Core scientific computing
    "numpy>=1.21.0",
    "scipy<2.0,>=1.7.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "pywavelets>=1.3.0",
    
    # Visualization
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    
    # System and performance monitoring
    "psutil>=5.8.0",
    "networkx>=2.6.0",
    
    # For saving/loading ML models
    "joblib>=1.1.0",
]

[project.optional-dependencies]
ml = [
    # PyTorch for deep learning and neural networks
    "torch>=1.12.0",
    
    # JAX ecosystem for automatic differentiation and GPU acceleration
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "optax>=0.1.0",  # JAX optimization library
    
    # NUMBA for JIT compilation and parallel computing
    "numba>=0.56.0"
]

docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst_parser>=0.18.0",
    "sphinx-autodoc-typehints>=1.12.0",
    "pygments>=2.10.0",
]

gpu = [
    "cupy>=10.0.0",  # CUDA acceleration
    "cudf>=21.0.0",  # GPU DataFrame
]

[project.urls]
"Homepage" = "https://github.com/dave2k77/lrdbenchmark"
"Bug Tracker" = "https://github.com/dave2k77/lrdbenchmark/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hpfracc*"]
exclude = [
    "tests*",
    "examples*",
    "benchmarks*",
    "docs*",
    "scripts*",
    "venv*",
    "data*",
    "*.egg-info*",
    "__pycache__*",
    "src*",
]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=hpfracc",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["hpfracc"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
max-line-length = 120
ignore = [
  "E501",  # line length handled above
  "W503",  # line break before binary operator
  "W504",  # line break after binary operator (style-only)
]
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  "examples",
  "benchmarks",
  "docs"
]
